Created weather and feedback page

--- a/login.html
+++ b/login.html
@@ -232,7 +232,7 @@
   <!-- Error Modal -->
   <div id="errorModal" class="modal">
     <div class="modal-content">
-      <p>❌ Invalid Email or Password</p>
+      <p>Invalid Email or Password</p>
       <button id="errorOk">OK</button>
     </div>
   </div>
