--- a/share-experience.html
+++ b/share-experience.html
@@ -4,225 +4,306 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Share Your Experience</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="aboutus.css">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
-  body {
-    font-family: 'Poppins', 'Montserrat', sans-serif;
+  /* Custom properties for a modern, consistent dark theme matching project.html */
+  :root {
+    --dark-bg: #1A1E29;
+    --section-bg: #1A1E29;
+    --card-bg: #252A3B;
+    --text-light: #f0f8ff;
+    --text-muted: #aeb8c9;
+    --neon-blue: #00e0ff;
+    --primary-color: var(--neon-blue);
+  }
+
+  /* Base Styles & Background */
+  * {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  body {
+    font-family: 'Poppins', sans-serif;
+    background-image: linear-gradient(rgba(26, 30, 41, 0.8), rgba(26, 30, 41, 0.8)), url('https://images.unsplash.com/photo-1488646953014-85cb44e25828?fit=crop&w=1920&q=80');
+    background-size: cover;
+    background-attachment: fixed;
+    color: var(--text-light);
     min-height: 100vh;
-    background: linear-gradient(135deg, #a8edea, #fed6e3); /* same as aboutus.css */
-    color: #333;
     display: flex;
     flex-direction: column;
     align-items: center;
+    opacity: 0;
+    transition: opacity 0.5s;
   }
 
-  /* Navbar (same as aboutus.html/aboutus.css) */
+  body.loaded {
+    opacity: 1;
+  }
+
+  /* Navbar */
   .navbar {
-    width: 100%;
-    background: rgba(255, 255, 255, 0.75);
-    color: #fff;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding: 0 36px;
-    height: 64px;
-    box-sizing: border-box;
-    font-family: 'Montserrat', 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 1.5rem;
-    letter-spacing: 0.5px;
-    box-shadow: 0 2px 12px rgba(0,0,0,0.04);
+    align-items: center;
+    padding: 15px 50px;
+    background: rgba(26, 30, 41, 0.95);
+    backdrop-filter: blur(5px);
+    font-family: 'Montserrat', sans-serif;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.5);
     position: sticky;
     top: 0;
-    z-index: 1000;
-    position: relative;
+    z-index: 100;
+    border-bottom: 1px solid rgba(0, 224, 255, 0.3);
+    width: 100%;
   }
-  .navbar .logo {
-    font-size: 1.5rem;
+
+  .logo {
+    font-size: 26px;
     font-weight: 700;
+    color: var(--neon-blue);
+    text-shadow: 0 0 7px rgba(0, 224, 255, 0.8);
     letter-spacing: 1px;
-    color: #2A7B9B;
-    text-shadow: 0 2px 8px rgba(0,0,0,0.07);
-    font-family: 'Montserrat', 'Poppins', sans-serif;
-    text-decoration: none;
   }
-  .navbar nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 28px;
-  }
-  .navbar nav ul li {
-    display: inline-block;
-  }
-  .navbar nav ul li a {
-    color: #2A7B9B;
-    text-decoration: none;
-    font-size: 1rem;
+
+  .navbar a, .navbar span {
+    margin-left: 20px;
+    color: var(--text-muted);
     font-weight: 600;
-    font-family: 'Montserrat', 'Poppins', sans-serif;
-    padding: 8px 16px;
-    border-radius: 6px;
-    transition: background 0.18s;
+    font-size: 16px;
+    transition: color 0.3s;
   }
-  .navbar nav ul li a:hover {
-    background: rgba(255,255,255,0.13);
-  }
-  @media (max-width: 600px) {
-    .navbar {
-      font-size: 1.1rem;
-      padding: 0 10px;
-      height: 54px;
-    }
-    .navbar nav ul {
-      gap: 10px;
-    }
-    .navbar .logo {
-      font-size: 1.1rem;
-    }
+
+  .navbar a:hover {
+    color: var(--neon-blue);
+    text-shadow: 0 0 5px rgba(0, 224, 255, 0.5);
   }
 
   .feedback-container {
-  background: linear-gradient(135deg, rgba(255,255,255,0.55), rgba(255,255,255,0.25));
-  backdrop-filter: blur(14px) saturate(120%);
-  -webkit-backdrop-filter: blur(14px) saturate(120%);
-  border: 1.5px solid rgba(255,255,255,0.6);
-  padding: 20px 25px;
-  border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.10);
-  width: 100%;
-  max-width: 600px;  
-  margin: 30px auto;
-}
-  
-input[type="text"],
-input[type="email"],
-textarea,
-select,
-button {
-  width: 100%;          /* container ke full width tak stretch */
-  box-sizing: border-box;  /* padding bhi width mei count hogi */
-}
-h2 {
-  text-align: center;
-  margin-bottom: 6px;   /* kam spacing */
-  font-size: 1.4rem;    /* thoda chhota heading */
-}
+    background: linear-gradient(135deg, rgba(37, 42, 59, 0.8), rgba(26, 30, 41, 0.6));
+    backdrop-filter: blur(20px) saturate(150%);
+    -webkit-backdrop-filter: blur(20px) saturate(150%);
+    border: 1px solid rgba(0, 224, 255, 0.3);
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 8px 32px rgba(0, 224, 255, 0.2);
+    width: 100%;
+    max-width: 600px;
+    margin: 20px auto;
+    color: var(--text-light);
+    max-height: calc(100vh - 150px);
+    overflow-y: auto;
+  }
 
-p.description {
-  text-align: center;
-  color: #555;
-  margin-bottom: 12px;  /* kam spacing */
-  font-size: 0.9rem;    /* chhoti description */
-}
+  .feedback-container::-webkit-scrollbar {
+    width: 8px;
+  }
 
-label {
-  display: block;
-  margin-top: 8px;     /* kam gap */
-  font-weight: 500;
-  font-size: 0.9rem;
-}
-input, select, textarea {
+  .feedback-container::-webkit-scrollbar-track {
+    background: rgba(26, 30, 41, 0.5);
     border-radius: 10px;
-    border: 1px solid #ddd;
-    padding: 10px;
+  }
+
+  .feedback-container::-webkit-scrollbar-thumb {
+    background: var(--neon-blue);
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 224, 255, 0.5);
+  }
+
+  .feedback-container::-webkit-scrollbar-thumb:hover {
+    background: #4de6ff;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 2rem;
+    color: var(--neon-blue);
+    text-shadow: 0 0 10px rgba(0, 224, 255, 0.5);
+  }
+
+  p.description {
+    text-align: center;
+    color: var(--text-muted);
+    margin-bottom: 20px;
+    font-size: 1rem;
+  }
+
+  label {
+    display: block;
+    margin-top: 15px;
+    font-weight: 500;
+    font-size: 1rem;
+    color: var(--text-light);
+  }
+
+  input, select, textarea {
+    border-radius: 8px;
+    border: 1px solid rgba(0, 224, 255, 0.3);
+    padding: 12px;
     width: 100%;
     box-sizing: border-box;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    background-color: rgba(37, 42, 59, 0.8);
+    color: var(--text-light);
+    box-shadow: 0 0 5px rgba(0, 224, 255, 0.2);
     transition: all 0.3s ease-in-out;
-}
+    font-size: 16px;
+  }
 
-input:focus, select:focus, textarea:focus {
-    border-color: #4a90e2;
-    box-shadow: 0 0 8px rgba(74,144,226,0.3);
+  input:focus, select:focus, textarea:focus {
+    border-color: var(--neon-blue);
+    box-shadow: 0 0 10px var(--neon-blue);
     outline: none;
-}
+  }
 
-input[type="text"], input[type="email"], textarea, select {
-  padding: 6px 8px;    /* input fields ki height kam */
-  font-size: 14px;
-}
+  textarea {
+    min-height: 100px;
+    resize: vertical;
+  }
 
-textarea {
-  min-height: 60px;   /* kam height */
-}
-.stars {
-  display: flex;
-  gap: 5px;
-  font-size: 25px;
-  cursor: pointer;
-}
-.star {
-  color: lightgray;
-  transition: color 0.2s;
-}
-.star.selected {
-  color: gold;
-}
+  .stars {
+    display: flex;
+    gap: 8px;
+    font-size: 30px;
+    cursor: pointer;
+    justify-content: center;
+    margin: 10px 0;
+  }
 
+  .star {
+    color: var(--text-muted);
+    transition: color 0.2s;
+  }
 
-.stars span {
-  font-size: 20px;    /* stars chhote */
-}
-.star-rating span {
-    cursor: default !important;   /* sirf arrow dikhega */
-    text-decoration: none !important; /* underline nahi aayegi */
-}
+  .star.selected {
+    color: #ffd700;
+    text-shadow: 0 0 5px rgba(255, 215, 0, 0.5);
+  }
 
-/* .star-rating label, 
-.star-rating a {
-    cursor: default !important;
-    text-decoration: none !important;
-} */
-
-.star-rating span:hover,
-.star-rating span:hover ~ span {
-  color: gold;   /* hover pe highlight */
-  text-decoration: none;
-}
-
-button {
-  border-radius: 10px;               /* rounded edges */
-  padding: 12px 20px;                /* spacing */
-  border: none;  
-  background: #2A7B9B;
-  margin-top: 12px;
-  /* padding: 8px; */
-  font-size: 14px;
-  color: white;                      /* text color */
-    font-size: 16px;                   /* bigger font */
+  button {
+    border-radius: 10px;
+    padding: 14px 24px;
+    border: none;
+    background: var(--neon-blue);
+    color: var(--dark-bg);
+    font-size: 16px;
     font-weight: bold;
-    cursor: pointer;                   /* hand cursor for button */
-    transition: all 0.3s ease-in-out;  /* smooth hover */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* soft shadow */
-}
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 4px 15px rgba(0, 224, 255, 0.8);
+    margin-top: 20px;
+  }
 
-  button:hover, input[type="submit"]:hover {
-    background: #0056b3;
-    box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-    transform: translateY(-2px); 
+  button:hover {
+    background: #4de6ff;
+    box-shadow: 0 6px 20px rgba(0, 224, 255, 1);
+    transform: translateY(-2px);
   }
 
   .success-msg {
-    margin-top: 12px;
+    margin-top: 15px;
     text-align: center;
-    color: green;
+    color: #4ade80;
     display: none;
     font-weight: 500;
+    font-size: 1rem;
+  }
+
+  /* Modal Styles */
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(5px);
+  }
+
+  .modal-content {
+    background: linear-gradient(135deg, rgba(37, 42, 59, 0.9), rgba(26, 30, 41, 0.9));
+    margin: 15% auto;
+    padding: 30px;
+    border: 1px solid rgba(0, 224, 255, 0.3);
+    border-radius: 15px;
+    box-shadow: 0 8px 32px rgba(0, 224, 255, 0.5);
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+    color: var(--text-light);
+  }
+
+  .modal h3 {
+    margin-bottom: 20px;
+    color: var(--neon-blue);
+    font-size: 1.5rem;
+  }
+
+  .modal p {
+    margin-bottom: 20px;
+    font-size: 1rem;
+  }
+
+  .modal button {
+    border-radius: 10px;
+    padding: 12px 24px;
+    border: none;
+    background: var(--neon-blue);
+    color: var(--dark-bg);
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 4px 15px rgba(0, 224, 255, 0.8);
+  }
+
+  .modal button:hover {
+    background: #4de6ff;
+    box-shadow: 0 6px 20px rgba(0, 224, 255, 1);
+    transform: translateY(-2px);
+  }
+
+  /* Responsive */
+  @media (max-width: 768px) {
+    .navbar {
+      padding: 15px 20px;
+    }
+    .logo {
+      font-size: 22px;
+    }
+    .navbar a, .navbar span {
+      font-size: 14px;
+    }
+    .feedback-container {
+      padding: 20px;
+      margin: 30px auto;
+      max-height: calc(100vh - 150px);
+      overflow-y: auto;
+    }
+    h2 {
+      font-size: 1.5rem;
+    }
+    .modal-content {
+      margin: 20% auto;
+      padding: 20px;
+    }
   }
 </style>
 </head>
 <body>
-  <!-- Navbar (same as aboutus.html) -->
+  <!-- Navbar like weather.html -->
   <header class="navbar">
-    <a href="project.html" class="logo">Plan & Go ✈</a>
+    <div class="logo">Plan & Go ✈</div>
     <nav>
-      <ul>
-        <li><a href="project.html">Home</a></li>
-      </ul>
+      <a href="project.html">Home</a>
     </nav>
   </header>
 
@@ -340,7 +421,28 @@ button {
     <div class="success-msg" id="successMsg">Thank you! Your feedback has been recorded.</div>
   </div>
 
+  <!-- Modals -->
+  <div id="errorModal" class="modal">
+    <div class="modal-content">
+      <h3>⚠ Error</h3>
+      <p id="errorMessage"></p>
+      <button onclick="closeModal('errorModal')">OK</button>
+    </div>
+  </div>
+
+  <div id="successModal" class="modal">
+    <div class="modal-content">
+      <h3>Success</h3>
+      <p>Feedback submitted successfully!</p>
+      <button onclick="window.location.href='project.html'">Back to Home</button>
+    </div>
+  </div>
+
 <script>
+  // Fade in the page on load
+  window.addEventListener('load', () => {
+    document.body.classList.add('loaded');
+  });
 
   // Pre-fill user info only
   const user = JSON.parse(localStorage.getItem("loggedInUser")) || {};
@@ -387,7 +489,7 @@ button {
     const feedbackText = document.getElementById("feedbackText").value.trim();
 
     if(!name || !email || !feedbackText || !destination || selectedRating === 0){
-      alert("⚠ Please fill all fields, select a destination and rating!");
+      showModal('errorModal', 'Please fill all fields, select a destination and rating!');
       return;
     }
 
@@ -403,13 +505,35 @@ button {
     allFeedback.push(feedback);
     localStorage.setItem("feedbackList", JSON.stringify(allFeedback));
 
-    document.getElementById("successMsg").style.display = "block";
+    showModal('successModal');
     document.getElementById("feedbackText").value = "";
-    document.getElementById("tripDestination").value = ""; 
+    document.getElementById("tripDestination").value = "";
     selectedRating = 0;
     updateStars(selectedRating);
     dropdown.value = "";
   });
+
+  function showModal(modalId, message = '') {
+    const modal = document.getElementById(modalId);
+    if (message) {
+      document.getElementById('errorMessage').textContent = message;
+    }
+    modal.style.display = 'block';
+  }
+
+  function closeModal(modalId) {
+    document.getElementById(modalId).style.display = 'none';
+  }
+
+  // Close modal when clicking outside
+  window.onclick = function(event) {
+    const modals = document.querySelectorAll('.modal');
+    modals.forEach(modal => {
+      if (event.target === modal) {
+        modal.style.display = 'none';
+      }
+    });
+  }
 
   
 </script>
